x1136 support qPCR results via OpWithSlotMeasurementsRequest
Also refactored the service a bit re later added features.
For #332